# RSRayTracingV3

./: .envrc  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  toolchain.toml  web_notes.md
assets/: Test.blend
benches/: epaint_image_draw.rs  epaint_image_size.rs
src/: app.rs  bytes.rs  frag.wgsl  gpu.rs  history.rs  lib.rs  main.rs  movement.rs  panels.rs  shader.wgsl  time.rs  ui.rs  utils.rs  wgpu_app.rs
src/gpu/: connection.rs  frag.hlsl  frag.wgsl  mod.rs  random_texture.rs  render_target.rs  render_texture.rs  shaders.rs  shared_gpu.rs  vert.hlsl  vert.wgsl
src/ray_tracer/: camera.rs  mat44.rs  mod.rs  objects.rs  ray.rs  ray_tracer.rs  renderer.rs  scene.rs  solver.rs  utils.rs  vec3.rs  viewport.rs
src/shaders/: frag.hlsl  inputs.hlsl  random.hlsl  ray.hlsl  utils.hlsl  vert.hlsl
src/utils/: bytes.rs  history.rs  mod.rs  time.rs
web/: build.sh  index.js  secrets.json  server.js  server.ts  wasm-worker.js
web/public/: index.html
