[package]
name = "rs_ray_tracing_v3"
version = "0.1.0"
authors = ["Arlo Blythe"]
edition = "2021"

# The window just doesn't open with opt-level = 0
# No clue why

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2

[dependencies]
egui = "0.26"
egui_plot = "0.26"
egui-winit = "0.26"
egui-wgpu = "0.26"
rand = "0.8"
rand_distr = "0.4"
wgpu = { version = "0.19", features = ["spirv"] }
inline-spirv = "0.2"
pollster = "0.3"
num_cpus = "1.16"
image = { version = "0.25", default-features = false, features = ["exr"] }
uuid = { version = "1.8", features = ["v4"] }

